<resources>
    <string name="app_name">ChordProgressionBuilder</string>
    <string name="minor_key">Minor</string>
    <string name="create_key">Generate</string>
    <string name="next_page">Continue</string>
    <string name="key_generator">Generate Key</string>
    <string name="chord_info">Selected Chord Info:</string>
    <string name="progression_builder">Progression Builder</string>
    <string name="bpm">BPM</string>
    <string name="common_progressions">Common Progressions:</string>
    <string name="custom_progressions">Custom Progression:</string>
    <string name="stored_progressions">Stored Progressions</string>
    <string name="customize_chord">Customize Chord</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>


    <string-array name="keys">
        <item>C</item>
        <item>C#</item>
        <item>Db</item>
        <item>D</item>
        <item>D#</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>Gb</item>
        <item>G</item>
        <item>G#</item>
        <item>Ab</item>
        <item>A</item>
        <item>A#</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>
</resources>
