<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/activity_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--&gt;-->

    <!--<android.support.design.widget.NavigationView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--app:menu="@menu/navigation_menu"-->
        <!--android:layout_gravity="start"-->
        <!--app:headerLayout="@layout/nav_header"-->
        <!--android:id="@+id/nv">-->

    <!--</android.support.design.widget.NavigationView>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight=".01"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/key_generator"
        android:textAlignment="center"
        android:textColor="@color/textColor">

    </TextView>

    <Spinner
        android:id="@+id/KeySpinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".07"
        android:layout_marginTop="16dp"
        android:minWidth="200dp"
        android:background="@drawable/card"
        android:entries="@array/keys" />

    <CheckBox
        android:id="@+id/MajorMinorCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight=".075"
        android:background="@drawable/card"
        android:textColor="@color/textColor"
        android:text="@string/minor_key">
    </CheckBox>

    <Button
        android:id="@+id/ConfirmationButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight=".075"
        android:background="@drawable/card"
        android:textColor="@color/textColor"
        android:text="@string/create_key" />


    <TextView
        android:id="@+id/KeyHeader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:textSize="30sp"
        android:text=" Chords in Chosen Key: "
        android:textColor="@color/textColor"
        android:background="@drawable/card"
        >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <LinearLayout
            android:id="@+id/ChordKey1"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <Button
                android:id="@+id/ChordButton1"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:background="@drawable/chord_button_spacer"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey2"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton2"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey3"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton3"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey4"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton4"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <LinearLayout
            android:id="@+id/ChordKey5"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <Button
                android:id="@+id/ChordButton5"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    android:background="@drawable/chord_button_spacer"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey6"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton6"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey7"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton7"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ChordKey8"
            android:layout_width="0dp"
            android:layout_weight=".2"
            android:layout_height="match_parent"
            android:background="@drawable/chord_button"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/chord_button_spacer"/>
            </LinearLayout>
            <Button
                android:id="@+id/ChordButton8"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:onClick="chordClick"
                android:textSize="36sp"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:text="@string/chord_info"
        android:textColor="@color/textColor"
        android:background="@drawable/highlighted_card"
        >
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:minWidth="250dp"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:background="@drawable/highlighted_card"
        >
        <TextView
            android:id="@+id/ChordQualityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="32sp"
            android:textColor="@color/textColor"
            android:maxWidth="500dp"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/ChordNoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/textColor"
            android:maxWidth="500dp"
            android:layout_gravity="center"
            >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/textColor"
        android:background="@drawable/card"
        android:text="@string/next_page" />
</LinearLayout>
<!--</android.support.v4.widget.DrawerLayout>-->
